<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/game_background">

    <include layout="@layout/toolbar_view"
        android:id="@+id/change_password_toolbar"/>

    <EditText
        android:id="@+id/change_password_view_old_password"
        android:layout_width="@dimen/auth_box_width"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_old_password"
        android:textSize="@dimen/auth_uni_hint_text_size"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/change_password_view_new_password" />

    <EditText
        android:id="@+id/change_password_view_new_password"
        android:layout_width="@dimen/auth_box_width"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_new_password"
        android:textSize="@dimen/auth_uni_hint_text_size"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/change_password_view_repeat_new_password" />

    <EditText
        android:id="@+id/change_password_view_repeat_new_password"
        android:layout_width="@dimen/auth_box_width"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_repeat_new_password"
        android:textSize="@dimen/auth_uni_hint_text_size"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/change_password_view_change_button"
        android:layout_width="@dimen/auth_box_width"
        android:layout_height="@dimen/auth_buttons_height"
        android:background="@drawable/green_button_pressed"
        android:cropToPadding="true"
        android:text="@string/change_password_change_button"
        android:textSize="@dimen/auth_uni_text_size_large"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/change_password_view_repeat_new_password"
        android:layout_marginTop="@dimen/sign_up_button_top_margin"/>

</RelativeLayout>