<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/password_recovery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/game_background">

    <include layout="@layout/toolbar_view"
        android:id="@+id/password_recovery_toolbar"/>


    <TextView
        android:id="@+id/profile_view_edit_account"
        android:layout_width="@dimen/auth_box_width"
        android:layout_height="wrap_content"
        android:text="@string/password_rec_view_suggestion"
        android:textSize="@dimen/auth_uni_text_size_small"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/password_rec_view_email"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/password_rec_view_email"
        android:layout_width="@dimen/auth_box_width"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        android:textSize="@dimen/auth_uni_hint_text_size"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp" />

    <Button
        android:id="@+id/password_rec_view_recover_button"
        android:layout_width="@dimen/auth_box_width"
        android:layout_height="@dimen/auth_buttons_height"
        android:background="@drawable/green_button_pressed"
        android:text="@string/sign_up_button_text"
        android:textSize="@dimen/auth_uni_text_size_large"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password_rec_view_email" />

</RelativeLayout>